# GoIT

./: README.md
Colab/: Домашня_робота_Matplotlib.ipynb  Домашня_робота_NumPy.ipynb  Домашня_робота_Seaborn.ipynb  Домашні_завдання_Pandas(1).ipynb  Домашні_завдання_Pandas(2).ipynb  Домашні_завдання_Pandas(3).ipynb  Домашні_завдання_Pandas.ipynb  Домашні_завдання_SciPy.ipynb
gemini/: pyproject.toml
gemini/src/gemini/: probe.py
gomoku/: README.md  pyproject.toml
gomoku/src/gomoku/: game.py  side6.py
probe/: animal.py  contacts.py  cust_exceptoion.py  point.py  user_collections.py
